--- a/Project/TVShowsSearch/index.html
+++ b/Project/TVShowsSearch/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="app.css">
     <title>Document</title>
 </head>
 <body>
